# optimization-pt2

./: Cargo.toml  LICENSE  README.md  tests.json
crates/pt2-cli/: Cargo.toml
crates/pt2-cli/src/: cli.rs  config.rs  main.rs  tests.rs
crates/pt2-core/: Cargo.toml
crates/pt2-core/src/: algorithm.rs  error.rs  interfaces.rs  lib.rs  lpp.rs
crates/pt2-tui/: Cargo.toml
crates/pt2-tui/src/: app.rs  main.rs  tests.rs
crates/pt2-tui/src/app/: ui.rs
pt2-core/: Cargo.toml
report/: report.tex
