[package]
name = "pt2-tui"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.92"
pt2-core = { path = "../pt2-core" }
serde.workspace = true
serde_json = "1.0.132"

[lints]
workspace = true
