[package]
name = "pt2-core"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
na = { version = "0.33.1", package = "nalgebra" }
serde.workspace = true
thiserror = "1.0.64"

[lints]
workspace = true
