[package]
name = "pt2-tui"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
ratatui = { version = "0.28.1", default-features = false, features = ["crossterm"] }

[lints]
workspace = true
